Update libraries (#28)
* Gradle 8.5

* Update dependencies