@@ -1,14 +1,15 @@
 package io.github.spencerpark.jupyter.kernel.util;
 
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.*;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.stream.Stream;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-@RunWith(Parameterized.class)
 public class InheritanceIteratorTest {
     interface I {}
 
@@ -44,40 +45,32 @@ public class InheritanceIteratorTest {
 
     class H implements Q {}
 
-    @Parameterized.Parameters
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][]{
-                { A.class, Arrays.asList(A.class, Object.class) },
-                { B.class, Arrays.asList(B.class, A.class, Object.class) },
-                { C.class, Arrays.asList(C.class, B.class, A.class, Object.class) },
-                { int.class, Collections.singletonList(int.class) },
-                { D.class, Arrays.asList(D.class, Object.class) },
-                { E.class, Arrays.asList(E.class, L.class, J.class, K.class, I.class, D.class, Object.class) },
-                { F.class, Arrays.asList(F.class, J.class, K.class, I.class, E.class, L.class, D.class, Object.class) },
-                { G.class, Arrays.asList(G.class, N.class, O.class, Object.class) },
-                { H.class, Arrays.asList(H.class, Q.class, P.class, M.class, N.class, Object.class) },
-        });
+    public static Stream<Arguments> data() {
+        return Stream.of(
+                Arguments.of(A.class, List.of(A.class, Object.class)),
+                Arguments.of(B.class, List.of(B.class, A.class, Object.class)),
+                Arguments.of(C.class, List.of(C.class, B.class, A.class, Object.class)),
+                Arguments.of(int.class, List.of(int.class)),
+                Arguments.of(D.class, List.of(D.class, Object.class)),
+                Arguments.of(E.class, List.of(E.class, L.class, J.class, K.class, I.class, D.class, Object.class)),
+                Arguments.of(F.class, List.of(F.class, J.class, K.class, I.class, E.class, L.class, D.class, Object.class)),
+                Arguments.of(G.class, List.of(G.class, N.class, O.class, Object.class)),
+                Arguments.of(H.class, List.of(H.class, Q.class, P.class, M.class, N.class, Object.class))
+        );
     }
 
-    private final Class root;
-    private final List<Class> expectedOrder;
-
-    public InheritanceIteratorTest(Class root, List<Class> expectedOrder) {
-        this.root = root;
-        this.expectedOrder = expectedOrder;
-    }
-
-    private List<Class> collectIteration(Class root) {
-        List<Class> data = new LinkedList<>();
+    private List<Class<?>> collectIteration(Class<?> root) {
+        List<Class<?>> data = new LinkedList<>();
         InheritanceIterator it = new InheritanceIterator(root);
         while (it.hasNext()) data.add(it.next());
         return data;
     }
 
-    @Test
-    public void test() {
-        List<Class> actual = collectIteration(this.root);
+    @ParameterizedTest
+    @MethodSource("data")
+    public void test(Class<?> root, List<Class<?>> expectedOrder) {
+        List<Class<?>> actual = collectIteration(root);
 
-        assertEquals(this.expectedOrder, actual);
+        assertEquals(expectedOrder, actual);
     }
 }
